--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -3,8 +3,9 @@ on: [push]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Test the action
     steps:
+      - uses: actions/checkout@v2
       - name: Test
         uses: ./
         env:
